create unstable version
unstable version now exists for experimental updates

--- a/VSHORAD (unstable)/vshoradsim.html
+++ b/VSHORAD (unstable)/vshoradsim.html
@@ -43,6 +43,20 @@
             border-radius: 5px;
         }
 
+        #alert {
+            margin: auto;
+            color: white;
+            top: 120px;
+            left: 10px;
+            position: absolute;
+            padding: 5px;
+            width: 200px;
+            height: 60px;
+            font-size: 30px;
+            border-radius: 5px;
+            opacity: 0;
+        }
+
         #tempCross {
             color: lime;
             position: absolute;
@@ -83,6 +97,7 @@
 <body oncontextmenu="return false">
     <div id="cage"></div>
     <div id="loadIndicate"></div>
+    <div id="alert"></div>
 
     <!-- alternate reticle -->
     <!-- <div id = "tempCross">><span style="color:black">o</span><</div> -->
@@ -123,7 +138,7 @@
         </div>
     </div>
 
-    <div id="ver">v1.1</div>
+    <div id="ver">v1.2a</div>
 
 </body>
 
