--- a/VSHORAD (unstable)/vshoradsim.html
+++ b/VSHORAD (unstable)/vshoradsim.html
@@ -69,7 +69,7 @@
         #tempCross {
             display: table-cell;
             vertical-align: middle;
-            color: lime;
+            color: rgba(0, 255, 0, 0.641);
             margin: auto;
             top: 0; left: 0; right: 0; bottom: 0;
             pointer-events: none;
@@ -152,7 +152,7 @@
     </div>
     
 
-    <div id="ver">v1.3a</div>
+    <div id="ver">v1.3.1a</div>
 
 </body>
 
