--- a/FoV-Subject Preview/index.html
+++ b/FoV-Subject Preview/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>FoVS Preview</title>
+	<meta charset="utf-8">
+	<link rel="icon" href="FoVicon.png" type="png" sizes="32x32">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="index.css">
 </head>
@@ -12,10 +15,30 @@
 	
 	<div id="responses">
 		<div id="defaultText">
-			<form><label for="FLinput">Focal Length (in mm): </label><input type="text" class="UsrIn" id="FLinput" name="FLinput" value="18"></form>
-			<form><label for="Distinput">Distance to Target (in m): </label><input type="text" class="UsrIn" id="Distinput" name="Distinput" value="10"></form>
-			<form><label for="TargW">Target Width (in m): </label><input type="text" class="UsrIn" id="TargW" name="TargW" value="0.41"></form>
-			<form><label for="TargH">Target Height (in m): </label><input type="text" class="UsrIn" id="TargH" name="TargH" value="1.75"></form>
+			<table id="inTable">
+				<tr>
+					<td>
+						<form><label for="FLinput">Focal Length (in mm): </label><input type="text" class="UsrIn" id="FLinput" name="FLinput" value="18"></form>
+					</td>
+					<td>
+						<form><label for="TargW">Target Width (in m): </label><input type="text" class="UsrIn" id="TargW" name="TargW" value="0.41"></form>
+					</td>
+					<td>
+						<form><button type="button" class="UsrInB" id="Apache" name="Apache">Apache</button></form>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<form><label for="Distinput">Distance to Target (in m): </label><input type="text" class="UsrIn" id="Distinput" name="Distinput" value="10"></form>
+					</td>
+					<td>
+						<form><label for="TargH">Target Height (in m): </label><input type="text" class="UsrIn" id="TargH" name="TargH" value="1.75"></form>
+					</td>
+					<td>
+						<form><button type="button" class="UsrInB" id="Chinook" name="Chinook">Chinook</button></form>
+					</td>
+				</tr>
+			</table>
 		</div>
 
 		<div>Preview</div>
@@ -43,6 +66,5 @@
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="./index.js"></script>
-
 </body>
 </html> 
