--- a/f1-data/laptime.html
+++ b/f1-data/laptime.html
@@ -20,7 +20,8 @@
             Driver 1: <select id="dr1"></select><br/>
             Driver 2: <select id="dr2"></select><br/>
             Race: <select id="race"></select><br/>
-            Show timedelta instead of raw time: <input type="checkbox" id="timedelta"><br/>
+            Show graph lap by lap instead: <input type="checkbox" id="stacked"><br/>
+            Show timedelta instead: <input type="checkbox" id="timedelta"><br/>
             <br/><br/><br/>
             <button id="cmp"> > Compare! < </button>
         </div>
