--- a/VSHORAD (unstable)/vshoradsim.html
+++ b/VSHORAD (unstable)/vshoradsim.html
@@ -16,7 +16,6 @@
             text-align: center;
         }
 
-
         #cage {
             margin: auto;
             color: white;
@@ -58,12 +57,12 @@
         }
 
         #parent {
-        display: table;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        position: absolute;
-        pointer-events: none;
+            display: table;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            position: absolute;
+            pointer-events: none;
         }
 
         #tempCross {
@@ -73,8 +72,9 @@
             margin: auto;
             top: 0; left: 0; right: 0; bottom: 0;
             pointer-events: none;
-            font-size: 20px;
+            font-size: 1em;
             padding: 50%, 0;
+            width: 100%;
         }
 
         #notifsbg {
@@ -85,24 +85,104 @@
             left: 25%;
             width: 50%;
             height: 88%;
-            border-radius: 5px;
+            border-radius: 0.2em;
         }
 
         #notifs {
-            margin: 20px;
+            margin: 1em;
             color: lime;
             font-size: 15px;
             text-align: left;
         }
 
         #ver {
-            font-size: 10px;
+            font-size: 0.6em;
             position: absolute;
             bottom: 2%;
             left: 2%;
         }
+
+        #mobile{
+            display: none;
+        }
+
+        #mobileControlTable{
+            display:none;
+        }
+        @media screen and (max-width: 1000px) {
+            #tempCross {
+                display: table-cell;
+                vertical-align: middle;
+                color: rgba(0, 255, 0, 0.641);
+                margin: auto;
+                top: 45%; left: 0; right: 0; bottom: 0;
+                pointer-events: none;
+                position: absolute;
+                font-size: 1em;
+                width: 100%;
+            }
+
+            #mobile{
+                display: block;
+            }
+            #mobileControlTable{
+                display: block;
+                color: white;
+                bottom: 5em;
+                left: 0.5em;
+                position: absolute;
+                font-size: 1em;
+                border-radius: 5px;
+            }
+            #mobileControlTable tr td{
+                padding: 1em;
+                margin: 2em;
+                height: 5em;
+                background-color: rgb(0, 217, 255);
+                opacity: 50%
+            }
+
+            #alert {
+                margin: auto;
+                color: white;
+                top: 8em;
+                left: 10px;
+                position: absolute;
+                padding: 5px;
+                width: 10em;
+                height: 1em;
+                font-size: 0.8em;
+                border-radius: 5px;
+                opacity: 0;
+            }
+            #cage {
+                margin: auto;
+                color: white;
+                top: 2em;
+                left: 0.5em;
+                position: absolute;
+                padding: 5px;
+                width: 8em;
+                height: 1em;
+                font-size: 1.2em;
+                border-radius: 5px;
+            }
+
+            #loadIndicate {
+                margin: auto;
+                color: white;
+                top: 3.5em;
+                left: 0.5em;
+                position: absolute;
+                padding: 5px;
+                width: 8em;
+                height: 1em;
+                font-size: 1.2em;
+                border-radius: 5px;
+            }
+        }
     </style>
-    <script src="./vshoradsim.js" type="module"></script>
+    <script src="./vshoradsim.min.js" type="module"></script>
 </head>
 
 <body oncontextmenu="return false">
@@ -113,6 +193,7 @@
     
         <div id="tempCross">
         </div>
+
         <div id="notifsbg">
             <div id="notifs">
                 <h3 style="text-align: center; font-size: 30px">VSHORAD Simulator</h3>
@@ -150,9 +231,23 @@
 
 
     </div>
-    
 
-    <div id="ver">v1.5.0a</div>
+    <canvas id="threeCanvas"></canvas>
+
+    <div id="mobileControlTable" oncontextmenu="return true">
+        <table>
+            <tr>
+                <td id="mobileCage">cage/uncage</td>
+                <td id="mobileReload">reload</td>
+            </tr>
+            <tr>
+                <td id="mobileFire">fire</td>
+                <td id="mobileStart">START</td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="ver">v2.0.0a<p id="mobile">Mobile Ver</p></div>
 
 </body>
 
