--- a/InterceptTarget/explanation.html
+++ b/InterceptTarget/explanation.html
@@ -79,9 +79,9 @@
                     <br/><br/>
                     Using cosine rule, |Vb|² = |D|² + |Va|² - 2|D||Va|cosθ<br/>
                     ((Sb)(t))² = d² + ((Sa)(t))² - 2|D||Va|cosθ<br/>
-                    (Sb - Sa)t² + 2(d)(Sa)(cosθ)t - d² = 0<br/><br/>
+                    (Sb - Sa)t² + 2(d)(Sa)(t)(cosθ)t - d² = 0<br/><br/>
 
-                    Using the definition of dot product, D ⋅ Va = |D||Va|cosθ = (d)(Sa)(cosθ)<br/><br/>
+                    Using the definition of dot product, D ⋅ Va = |D||Va|cosθ = (d)(Sa)(t)(cosθ)<br/><br/>
 
                     Hence, (Sb - Sa)t² + 2(D ⋅ Va)t - d² = 0, giving us a quadratic formula with unknown term t<br/><br/>
 
