--- a/InterceptTarget/index.html
+++ b/InterceptTarget/index.html
@@ -1,17 +1,31 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
 
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="ship.js"></script>
-    <script src="target.js"></script>
-    <script src="blufor.js"></script>
-    <script src="opfor.js"></script>
-    <script src="sketch.js"></script>
-  
+<head>
+  <script src="p5.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
 
-</body></html>
+</head>
+
+<body>
+  <main>
+    <div id="instr">
+      Press space to pause/resume animation<br />
+      Click the "+" button to add more targets<br />
+      By default, targets moves towards cursor<br />
+      However, clicking "Toggle Follow Cursor" stops targets from moving towards cursor, and moves with random
+      acceleration genereated by Perlin noise.<br />
+
+      <a href="explanation.html">Click here for explanation behind math</a>
+    </div>
+  </main>
+  <script src="ship.js"></script>
+  <script src="target.js"></script>
+  <script src="blufor.js"></script>
+  <script src="opfor.js"></script>
+  <script src="sketch.js"></script>
+
+</body>
+
+</html>
