Changed page to use minified JS script

--- a/VSHORAD (unstable)/vshoradsim.html
+++ b/VSHORAD (unstable)/vshoradsim.html
@@ -197,7 +197,7 @@
 
         }
     </style>
-    <script src="./vshoradsim.js" type="module"></script>
+    <script src="./vshoradsim.min.js" type="module"></script>
 </head>
 
 <body oncontextmenu="return false">
