Explanation for "the missile knows where it is"

--- a/the-missile-knows-where-it-is/index.html
+++ b/the-missile-knows-where-it-is/index.html
@@ -11,13 +11,6 @@
 </head>
 
 <body>
-  <div id="instr">
-    Use WASD to control your civillian aircraft!
-    <br />
-    Use space to pause the missile!
-    <br />
-    Press space to start!
-  </div>
 
   <div id="quote">
     The missile knows where it is at all times<br />
@@ -49,6 +42,16 @@
   <main>
 
   </main>
+  
+  <div id="instr">
+    Use WASD to control your civillian aircraft!
+    <br />
+    Use space to pause the missile!
+    <br />
+    Press space to start!
+    <br />
+    Or, <a href="explanation.html">click here</a> to see the code behind the missile!
+  </div>
   <script src="sketch.js"></script>
   <script>
     document.onkeypress = () => {
