the missile knows where it is
added sound to "the missile knows where it is"

--- a/the-missile-knows-where-it-is/index.html
+++ b/the-missile-knows-where-it-is/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="favicon.png" type="png" sizes="32x32">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+  <script src="sound.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8" />
 
@@ -42,7 +43,7 @@
   <main>
 
   </main>
-  
+
   <div id="instr">
     Use WASD to control your civillian aircraft!
     <br />
