Detection of mobile devices
Changed how detection of mobile device is implemented.

--- a/VSHORAD (unstable)/vshoradsim.html
+++ b/VSHORAD (unstable)/vshoradsim.html
@@ -113,7 +113,7 @@
             display: none;
         }
 
-        @media screen and (max-width: 1000px) {
+        @media only screen and (hover: none) and (pointer: coarse){
             #tempCross {
                 display: table-cell;
                 vertical-align: middle;
@@ -264,7 +264,7 @@
         </table>
     </div>
 
-    <div id="ver">v2.0.2a<p id="mobile">Mobile Ver</p>
+    <div id="ver">v2.0.3a<p id="mobile">Mobile Ver</p>
     </div>
 
 </body>
