--- a/Not-A-Flight-Sim/index.html
+++ b/Not-A-Flight-Sim/index.html
@@ -102,7 +102,7 @@
       width: 20%;
     }
 
-    @media screen and (max-width: 1000px) {
+    @media only screen and (hover: none) and (pointer: coarse){
       #throttleIndicator {
         display: none;
       }
