--- a/RadarDisp/index.html
+++ b/RadarDisp/index.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="parent">
-    <div id="div1"> <p>PPI</p> </div>
+    <div id="div1"> <p>A-scope (Signal amplitude | Range)</p> </div>
     <div id="div2"> <p>Sector PPI</p> </div>
-    <div id="div3"> <p>A-scope (Signal amplitude | Range)</p> </div>
+    <div id="div3"> <p>EDITOR</p> </div>
     <div id="div4"> <p>SETTINGS 1</p></div>
     <div id="div5"> </div>
     <div id="div6"> </div>
@@ -22,12 +22,12 @@
       <div class="slidecontainer">
         <input type="range" step="1" min="-100" max="100" value="0" class="slider" id="xCoord"><br/>
         <input type="range" step="1" min="0" max="100" value="0" class="slider" id="yCoord" orient="vertical">
-        <input type="range" step="20" min="0" max="100" value="0" class="slider" id="zCoord" orient="vertical">
+        <input type="range" step="1" min="0" max="100" value="0" class="slider" id="zCoord" orient="vertical">
 	  </div>
     </div>
     <div id="div9"> <p>B-scope (Range | Azimuth)</p> </div>
-    <div id="div10"> <p>C-Scope (Elevation | Azimuth)</p> </div>
-    <div id="div11"> <p>EDITOR</p> </div>
+    <div id="div10"> <p>E-Scope (Range | Elevation)</p> </div>
+    <div id="div11"> <p>C-Scope (Elevation | Azimuth)</p> </div>
     <div id="div12"> <p>SETTINGS 2</p> </div>
     <div id="div13"> </div>
     <div id="div14"> </div>
@@ -41,6 +41,7 @@
   <script src="sectorppi.js"></script>
   <script src="ascope.js"></script>
   <script src="bscope.js"></script>
+  <script src="escope.js"></script>
   <script src="cscope.js"></script>
   <script src="editor.js"></script>
 </body>
